[gd_scene load_steps=19 format=3 uid="uid://ba52freryk52u"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_wvl6r"]
[ext_resource type="Texture2D" uid="uid://bwlnfswuxlfsi" path="res://Main/Assets/hp_and_rp_frame_empty.png" id="2_4avyd"]
[ext_resource type="Texture2D" uid="uid://yll7j1xw284s" path="res://Main/Assets/fill_red.png" id="3_g7j6a"]
[ext_resource type="Texture2D" uid="uid://6fl7j75igqib" path="res://Main/Assets/fill_hp.png" id="4_6hdog"]
[ext_resource type="Texture2D" uid="uid://be733nm136637" path="res://Main/Assets/fill_purple.png" id="4_gyr8h"]
[ext_resource type="Texture2D" uid="uid://bssfjrm2lc30w" path="res://Main/Assets/role_icon_frame_focus.png" id="5_f1jlc"]
[ext_resource type="Script" path="res://HUD/UpgradeButton.gd" id="5_y77ts"]
[ext_resource type="Texture2D" uid="uid://t45p1oqi05as" path="res://Main/Assets/kill_counter_icon.png" id="7_x3lhj"]
[ext_resource type="AudioStream" uid="uid://63t1ko6vhlik" path="res://Main/Assets/SUCCESS PICKUP Collect Beep 02.wav" id="8_b84vb"]
[ext_resource type="Texture2D" uid="uid://dqrgp4do2x2ju" path="res://Main/Assets/equipment_grade_select.png" id="9_1fqqj"]
[ext_resource type="Texture2D" uid="uid://dwkuykkhrdhq5" path="res://Main/Assets/mod_shockwave.png" id="9_16xeg"]
[ext_resource type="Texture2D" uid="uid://cq37mekg818y4" path="res://Main/Assets/mod_projectile_size.png" id="10_6yh2v"]
[ext_resource type="Texture2D" uid="uid://ov4ga5f5gfff" path="res://Main/Assets/stat_display.png" id="11_ppmtw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2jrip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ewrrw"]
content_margin_top = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cloea"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02d44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t550"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wvl6r")

[node name="HealthBarContainer" type="PanelContainer" parent="."]
y_sort_enabled = true
offset_left = 15.0
offset_top = 15.0
offset_right = 597.0
offset_bottom = 50.0

[node name="NinePatchRect" type="NinePatchRect" parent="HealthBarContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4avyd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="HealthBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerHealthBar" type="TextureProgressBar" parent="HealthBarContainer/MarginContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_progress = ExtResource("3_g7j6a")

[node name="ExpBarContainer" type="PanelContainer" parent="."]
y_sort_enabled = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1280.0
offset_top = -30.0
offset_right = 1280.0
grow_horizontal = 2
grow_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="ExpBarContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4avyd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="ExpBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PlayerExpBar" type="TextureProgressBar" parent="ExpBarContainer/MarginContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_progress = ExtResource("4_gyr8h")

[node name="BossHealthBarContainer" type="PanelContainer" parent="."]
visible = false
y_sort_enabled = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.0
offset_top = 100.0
offset_right = 291.0
offset_bottom = 135.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="BossHealthBarContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_4avyd")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="MarginContainer" type="MarginContainer" parent="BossHealthBarContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BossHealthBar" type="TextureProgressBar" parent="BossHealthBarContainer/MarginContainer"]
y_sort_enabled = true
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_progress = ExtResource("4_6hdog")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 147.0
grow_horizontal = 0

[node name="LevelDisplayContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2jrip")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/LevelDisplayContainer"]
z_index = 2
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 35

[node name="LevelDisplay" type="RichTextLabel" parent="VBoxContainer/LevelDisplayContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ewrrw")
bbcode_enabled = true
text = "40
"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/LevelDisplayContainer"]
layout_mode = 2
texture = ExtResource("5_f1jlc")
expand_mode = 1

[node name="KillCounterContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/KillCounterContainer"]
self_modulate = Color(1, 0, 0, 1)
material = SubResource("ShaderMaterial_cloea")
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_x3lhj")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/KillCounterContainer"]
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
bbcode_enabled = true
text = "9999

"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="TimePlayedContainer" type="PanelContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.5
offset_right = 81.5
offset_bottom = 61.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_02d44")

[node name="RichTextLabel" type="RichTextLabel" parent="TimePlayedContainer"]
layout_mode = 2
bbcode_enabled = true

[node name="UpgradeChoices" type="Panel" parent="."]
process_mode = 2
visible = false
offset_right = 2560.0
offset_bottom = 1440.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="UpgradeChoices"]
stream = ExtResource("8_b84vb")

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeChoices"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")

[node name="IconContainer" type="PanelContainer" parent="UpgradeChoices/HBoxContainer/Button"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.5
offset_right = 32.5
offset_bottom = 64.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeChoices/HBoxContainer/Button/IconContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Icon" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button/IconContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_16xeg")

[node name="IconBorder" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button/IconContainer"]
layout_mode = 2
texture = ExtResource("9_1fqqj")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeChoices/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UpgradeChoices/HBoxContainer/Button/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
uppercase = true

[node name="Desc" type="Label" parent="UpgradeChoices/HBoxContainer/Button/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Button2" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")

[node name="IconContainer" type="PanelContainer" parent="UpgradeChoices/HBoxContainer/Button2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_right = 41.5
offset_bottom = 82.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeChoices/HBoxContainer/Button2/IconContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Icon" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button2/IconContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_16xeg")

[node name="IconBorder" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button2/IconContainer"]
layout_mode = 2
texture = ExtResource("9_1fqqj")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeChoices/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UpgradeChoices/HBoxContainer/Button2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_alignment = 1
uppercase = true

[node name="Desc" type="Label" parent="UpgradeChoices/HBoxContainer/Button2/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Button3" type="Button" parent="UpgradeChoices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("5_y77ts")

[node name="IconContainer" type="PanelContainer" parent="UpgradeChoices/HBoxContainer/Button3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.5
offset_right = 41.5
offset_bottom = 82.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="UpgradeChoices/HBoxContainer/Button3/IconContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Icon" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button3/IconContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("10_6yh2v")

[node name="IconBorder" type="TextureRect" parent="UpgradeChoices/HBoxContainer/Button3/IconContainer"]
layout_mode = 2
texture = ExtResource("9_1fqqj")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeChoices/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="UpgradeChoices/HBoxContainer/Button3/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_alignment = 1
uppercase = true

[node name="Desc" type="Label" parent="UpgradeChoices/HBoxContainer/Button3/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="StatDisplay" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -340.0
offset_right = 260.0
offset_bottom = -40.0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="StatDisplay"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 45
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 45

[node name="VBoxContainer" type="VBoxContainer" parent="StatDisplay/MarginContainer"]
layout_mode = 2

[node name="BasicAttackDmg" type="RichTextLabel" parent="StatDisplay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="Damage" type="RichTextLabel" parent="StatDisplay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="ProjectileSize" type="RichTextLabel" parent="StatDisplay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="CritChance" type="RichTextLabel" parent="StatDisplay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="TextureRect" type="TextureRect" parent="StatDisplay"]
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
texture = ExtResource("11_ppmtw")

[node name="EndGameScreen" type="Panel" parent="."]
visible = false
z_index = 2
offset_right = 2560.0
offset_bottom = 1440.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6t550")

[node name="EndGameMenu" type="VBoxContainer" parent="EndGameScreen"]
custom_minimum_size = Vector2(400, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="EndGameScreen/EndGameMenu"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Level" type="RichTextLabel" parent="EndGameScreen/EndGameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bbcode_enabled = true
text = "Level"

[node name="EnemiesKilled" type="RichTextLabel" parent="EndGameScreen/EndGameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bbcode_enabled = true
text = "EnemiesKilled
"

[node name="BossFightTime" type="RichTextLabel" parent="EndGameScreen/EndGameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
bbcode_enabled = true
text = "BossFightTime
"

[node name="MenuBackButton" type="Button" parent="EndGameScreen/EndGameMenu"]
layout_mode = 2
text = "Back To Menu
"
